<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.student.assignment1.MainActivity"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/title_mainMenu"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/ticTacTie_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ticTacToe"
            android:tag="pvp"
            android:text="@string/ticTacToe_switch"
            android:layout_marginTop="47dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/numberGuessing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ticTacTie_Button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:onClick="numberGuessing"
            android:text="@string/numberGuessing_switch" />

        <Button
            android:id="@+id/memoryChallenge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberGuessing_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:onClick="memoryChallenge"
            android:text="@string/memoryChallenge_switch" />

    </RelativeLayout>

</LinearLayout>
